--- a/04_OOPPrinciplesPart01/02_Human/02_Human.csproj
+++ b/04_OOPPrinciplesPart01/02_Human/02_Human.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{74ADB7DB-5320-43D2-9C0D-CF17B511B079}</ProjectGuid>
+    <ProjectGuid>{1376A3AB-7CFE-41A1-B24D-61705CC20F32}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_01_School</RootNamespace>
-    <AssemblyName>01_School</AssemblyName>
+    <RootNamespace>_02_Human</RootNamespace>
+    <AssemblyName>02_Human</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,19 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Discipline.cs" />
-    <Compile Include="ICommentable.cs" />
-    <Compile Include="IPeople.cs" />
+    <Compile Include="Human.cs" />
+    <Compile Include="Student.cs" />
     <Compile Include="Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="School.cs" />
-    <Compile Include="Student.cs" />
-    <Compile Include="StudentsClass.cs" />
-    <Compile Include="Teacher.cs" />
+    <Compile Include="Worker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
