--- a/04_OOPPrinciplesPart01/03_Animals/03_Animals.csproj
+++ b/04_OOPPrinciplesPart01/03_Animals/03_Animals.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{74ADB7DB-5320-43D2-9C0D-CF17B511B079}</ProjectGuid>
+    <ProjectGuid>{8AA9D63C-21D6-404E-8472-A19F9446B693}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_01_School</RootNamespace>
-    <AssemblyName>01_School</AssemblyName>
+    <RootNamespace>_03_Animals</RootNamespace>
+    <AssemblyName>03_Animals</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,19 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Discipline.cs" />
-    <Compile Include="ICommentable.cs" />
-    <Compile Include="IPeople.cs" />
+    <Compile Include="Animals.cs" />
+    <Compile Include="Cat.cs" />
+    <Compile Include="Cats.cs" />
+    <Compile Include="Dog.cs" />
+    <Compile Include="Frog.cs" />
+    <Compile Include="ISound.cs" />
+    <Compile Include="Kitten.cs" />
     <Compile Include="Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="School.cs" />
-    <Compile Include="Student.cs" />
-    <Compile Include="StudentsClass.cs" />
-    <Compile Include="Teacher.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="ClassDiagram.cd" />
+    <Compile Include="Tomcat.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
